Legatura cu alt .js, adaugat <br>

--- a/src/ec2.html
+++ b/src/ec2.html
@@ -4,15 +4,18 @@
 <html>
 <body>
 <input type = "text" id = "a"/> 
+<br>
 <input type = "text" id = "b"/> 
+<br>
 <input type = "text" id = "c"/> 
+<br>
 
 <button onclick = "rezolva()"> Rezolva</button>
  
 <p id = "x1"></p>
 <p id = "x2"></p>
 
-<script src = ec2.js>
+<script src = ec2.struct.js>
  
 </script>
 </body>
