--- a/src/senzor/senzor.html
+++ b/src/senzor/senzor.html
@@ -9,9 +9,12 @@
 
 <body>
 
+
 <p id="a"> alpha = </p>
 <p id="b"> beta = </p>
 <p id="g"> gamma = </p>
+ 
+ <canvas id = "canvas" height = "400" width = "400"></canvas>
  
 <script src = senzor.js>
 </script>
