--- a/src/senzor/senzor.html
+++ b/src/senzor/senzor.html
@@ -16,7 +16,7 @@
  
  <canvas id = "canvas" height = "400" width = "400"></canvas>
  
-<script src = senzor.js>
+<script src = rect.js>
 </script>
 
 </body>
