--- a/src/senzor/touch.html
+++ b/src/senzor/touch.html
@@ -9,12 +9,10 @@
 
 <body>
 
-
-
  
- <canvas id = "canvas" height = "400" width = "400"></canvas>
+<canvas id = "canvas" height = "400" width = "400"></canvas>
  
-<script src = "touch.js">
+<script src = touch.js>
 </script>
 
 </body>
