--- a/src/senzor/senzor.html
+++ b/src/senzor/senzor.html
@@ -14,9 +14,10 @@
 <p id="b"> beta = </p>
 <p id="g"> gamma = </p>
  
+ 
  <canvas id = "canvas" height = "400" width = "400"></canvas>
  
-<script src = rect.js>
+<script src = rect2.js>
 </script>
 
 </body>
