--- a/src/senzor/touch2.html
+++ b/src/senzor/touch2.html
@@ -9,10 +9,10 @@
 
 <body>
 
- 
+  
 <canvas id = "canvas" height = "400" width = "400"></canvas>
  
-<script src = touch.js>
+<script src = touch2.js>
 </script>
 
 </body>
