--- a/src/senzor/touch2.html
+++ b/src/senzor/touch2.html
@@ -8,9 +8,9 @@
 
 
 <body>
-
+<p> Maria </p>
   
-<canvas id = "canvas" height = "400" width = "400"></canvas>
+<canvas id = "canvas" height = "800" width = "800"></canvas>
  
 <script src = touch2.js>
 </script>
