--- a/src/senzor/svg.html
+++ b/src/senzor/svg.html
@@ -6,7 +6,7 @@
 <body>
 <svg width="400" height="400" id="svg">
 <circle cx = "200" cy="200" r="20" stroke = "red" fill="red" id = "cerc1"/>
-
+<circle cx = "300" cy="200" r="20" stroke = "blue" fill="blue" id = "cerc2"/>
 </svg>
 
 <script src = "svg.js">
