--- a/src/speech/synt.html
+++ b/src/speech/synt.html
@@ -9,7 +9,7 @@
 <button type = "button" onclick = "speak()" > speak </button>
 
 
-<script src = "synt.js">
+<script src = "synt2.js">
 </script>
 
 </body>
