--- a/src/video/cam.html
+++ b/src/video/cam.html
@@ -8,6 +8,10 @@
 
 </video>
 
+<canvas id = "canvas"/>
+
+<button type = "button" onclick = "capteaza()">Capteaza</button>
+
 <script src = "cam.js"/>
 
 </script>
